Fix the nav bar text jumping from border

--- a/browserClient/carliApp/components/navBar/_navBar.scss
+++ b/browserClient/carliApp/components/navBar/_navBar.scss
@@ -35,16 +35,17 @@ nav[nav-bar] {
         margin: 0;
         padding: 0;
         text-align: center;
-        height: $height - 2; /* account for borders */
+        height: $height; // - 2; /* account for borders */ No need with box-sizing: border-box
         width: 138px;
         border-right: $border;
+        border-top: 3px solid transparent;
 
         a {
             color: $inactive-fg-color;
             text-decoration: none;
         }
         &.active {
-            border-top: solid $active-fg-color 3px;
+            border-top-color: $active-fg-color;
             a { color: $active-fg-color; }
         }
     }
